quickfix: stop user avatar and “hello” message from displaying on mobile screens

--- a/lms/static/sass/header/_header-appsembler-01.scss
+++ b/lms/static/sass/header/_header-appsembler-01.scss
@@ -115,7 +115,6 @@
       &.a--slide-menu {
         @media(max-width: $screen-sm-max) {
           display: inline-block;
-
         }
       }
 
@@ -214,6 +213,10 @@
           border-radius: 100%;
           display: block;
           margin-right: 1.5rem;
+        }
+
+        @media(max-width: $screen-sm-max) {
+          display: none;
         }
       }
     }
