--- a/lms/static/sass/header/_header-appsembler-02.scss
+++ b/lms/static/sass/header/_header-appsembler-02.scss
@@ -219,6 +219,10 @@
           display: block;
           margin-right: 1.5rem;
         }
+
+        @media(max-width: $screen-sm-max) {
+          display: none;
+        }
       }
     }
   }
